<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.yucli</groupId>
    <artifactId>yucli</artifactId>
    <version>19.0.0</version>
    <packaging>jar</packaging>

    <name>YuCLI</name>
    <description>A simple Java Agent CLI like Claude Code</description>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
    </properties>

    <dependencies>
        <!-- JSON处理 -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.16.0</version>
        </dependency>

        <!-- HTTP客户端 -->
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>4.12.0</version>
        </dependency>

        <!-- 日志 -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.18</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>

        <!-- JLine for terminal input handling -->
        <dependency>
            <groupId>org.jline</groupId>
            <artifactId>jline</artifactId>
            <version>3.26.3</version>
        </dependency>

        <!-- Lanterna for TUI interface -->
        <dependency>
            <groupId>com.googlecode.lanterna</groupId>
            <artifactId>lanterna</artifactId>
            <version>3.1.1</version>
        </dependency>

        <!-- 中文分词 -->
        <dependency>
            <groupId>com.huaban</groupId>
            <artifactId>jieba-analysis</artifactId>
            <version>1.0.2</version>
        </dependency>

        <!-- SQLite -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.49.1.0</version>
        </dependency>

        <!-- Java AST 解析 -->
        <dependency>
            <groupId>com.github.javaparser</groupId>
            <artifactId>javaparser-core</artifactId>
            <version>3.28.0</version>
        </dependency>

        <!-- HTML 解析（用于 web_fetch 正文提取） -->
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.18.1</version>
        </dependency>

        <!-- OkHttp MockWebServer（仅测试） -->
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>mockwebserver</artifactId>
            <version>4.12.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <forceCreation>true</forceCreation>
                    <archive>
                        <manifest>
                            <mainClass>com.yucli.cli.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.yucli.cli.Main</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <executions>
                    <execution>
                        <id>make-distribution</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptors>
                                <descriptor>src/assembly/assembly.xml</descriptor>
                            </descriptors>
                            <appendAssemblyId>true</appendAssemblyId>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!--
            jpackage profile: builds a native Windows installer (.exe).
            Requires WiX Toolset 3.0+ (light.exe, candle.exe) on PATH.
            Usage: mvn clean package -Pjpackage -DskipTests
        -->
        <profile>
            <id>jpackage</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.3.0</version>
                        <executions>
                            <execution>
                                <id>jpackage-windows</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>${java.home}/bin/jpackage.exe</executable>
                                    <arguments>
                                        <argument>--type</argument>
                                        <argument>exe</argument>
                                        <argument>--name</argument>
                                        <argument>YuCLI</argument>
                                        <argument>--app-version</argument>
                                        <argument>1.0</argument>
                                        <argument>--vendor</argument>
                                        <argument>YuCLI Team</argument>
                                        <argument>--description</argument>
                                        <argument>A simple Java Agent CLI like Claude Code</argument>
                                        <argument>--input</argument>
                                        <argument>${project.build.directory}</argument>
                                        <argument>--main-jar</argument>
                                        <argument>${project.build.finalName}.jar</argument>
                                        <argument>--main-class</argument>
                                        <argument>com.yucli.cli.Main</argument>
                                        <argument>--dest</argument>
                                        <argument>${project.build.directory}/jpackage</argument>
                                        <argument>--win-console</argument>
                                        <argument>--java-options</argument>
                                        <argument>-Dfile.encoding=UTF-8</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <!--
            jpackage-linux profile: builds a native Linux installer (.deb).
            Usage: mvn clean package -Pjpackage-linux -DskipTests
        -->
        <profile>
            <id>jpackage-linux</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.3.0</version>
                        <executions>
                            <execution>
                                <id>jpackage-linux</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>${java.home}/bin/jpackage</executable>
                                    <arguments>
                                        <argument>--type</argument>
                                        <argument>deb</argument>
                                        <argument>--name</argument>
                                        <argument>YuCLI</argument>
                                        <argument>--app-version</argument>
                                        <argument>1.0</argument>
                                        <argument>--vendor</argument>
                                        <argument>YuCLI Team</argument>
                                        <argument>--description</argument>
                                        <argument>A simple Java Agent CLI like Claude Code</argument>
                                        <argument>--input</argument>
                                        <argument>${project.build.directory}</argument>
                                        <argument>--main-jar</argument>
                                        <argument>${project.build.finalName}.jar</argument>
                                        <argument>--main-class</argument>
                                        <argument>com.yucli.cli.Main</argument>
                                        <argument>--dest</argument>
                                        <argument>${project.build.directory}/jpackage</argument>
                                        <argument>--java-options</argument>
                                        <argument>-Dfile.encoding=UTF-8</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
